docs/semantic-ontology/linkml/tests/valid/c2pa_embedding-c2pa-coverage-0.jsonld
{
  "@context": {
    "@vocab": "https://w3id.org/facis/dcs/ontology/v1#",
    "dcs": "https://w3id.org/facis/dcs/ontology/v1#",
    "xsd": "http://www.w3.org/2001/XMLSchema#"
  },
  "@id": "urn:doc:c2pa-coverage",
  "@type": "ContractTemplate",
  "documentTitle": "C2PA Coverage Ledger",
  "metadata": {
    "@type": "TemplateMetadata",
    "title": "C2PA Coverage Ledger"
  },
  "documentStructure": {
    "@type": "DocumentStructure",
    "layout": [
      {
        "@type": "LayoutNode",
        "isRoot": true,
        "children": [
          "urn:doc:c2pa-coverage#s1"
        ]
      },
      {
        "@type": "LayoutNode",
        "@id": "urn:doc:c2pa-coverage#s1",
        "children": [
          "urn:doc:c2pa-coverage#c1"
        ]
      }
    ],
    "blocks": [
      {
        "@type": "Section",
        "@id": "urn:doc:c2pa-coverage#s1",
        "title": "1. Provenance"
      },
      {
        "@type": "Clause",
        "@id": "urn:doc:c2pa-coverage#c1",
        "content": [
          "This document records provenance through ",
          "prov:Entity",
          " relationships."
        ]
      }
    ]
  }
}