docs/semantic-ontology/linkml/tests/invalid/placeholder-binds-to-non-field.jsonld
{
    "@context": {
        "dcs": "https://w3id.org/facis/dcs/ontology/v1#"
    },
    "@id": "did:web:localhost:template:test-bad-bindsto",
    "@type": "dcs:ContractTemplate",
    "dcs:documentStructure": {
        "@id": "did:web:localhost:template:test-bad-bindsto#document-structure",
        "@type": "dcs:DocumentStructure",
        "dcs:blocks": {
            "@list": [
                {
                    "@id": "did:web:localhost:template:test-bad-bindsto#clause-1",
                    "@type": "dcs:Clause",
                    "dcs:content": {
                        "@list": [
                            {
                                "@type": "dcs:Placeholder",
                                "dcs:bindsTo": {
                                    "@id": "did:web:localhost:template:test-bad-bindsto#not-a-field",
                                    "@type": "dcs:Clause"
                                }
                            }
                        ]
                    }
                }
            ]
        }
    }
}
